--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ fastmcp==2.12.3
 requests>=2.28.0
 google-generativeai==0.3.2
 google-ai-generativelanguage==0.4.0
+
+# Date parsing
+python-dateutil==2.8.2
